# books

./: .gitignore  BEST-PRACTICES.md  README.md  app.js  censorship.html  city_trade.html  city_trade.js  democracy_timeline.csv  evolution_geography.csv  evolution_timeline.csv  fennica_1920_network.csv  genres.html  genres.js  group_proposal.xlsx  index.css  index.html  istc_1480_network.csv  nature_geography.csv  nature_timeline.csv  network.json  pyproject.toml  remote_app.js  remote_index.css  remote_index.html  rproject.toml  team.html  ~$global_baseline.xlsx
assets/: preview_3d.html
data/: censor_timelines.json  hre_boundary.geojson  timeline.csv
other_stuff/: medieval_crisis_3d-2 (2).html  medieval_crisis_3d-synonyms.html
scratch/: check_011_subfields.py  check_vd17_year.py  find_actor.py  generate_censor_timelines.py  generate_censor_timelines_fast.py  generate_censor_timelines_optimized.py  inspect_glb.py  inspect_network.py  sync_remote_app.py  test_censor_timeline.py  test_vd17_censor_years.py
shared_scripts/: README.md  check_censor_roles_vd16_vd18.py  get_confessional_timeline.py  network_exporter.py  query_networks_final.py
src/: check_codes.py  check_columns.py  check_istc_mapping.py  check_istc_years.py  common_basis.R  common_basis.py  common_basis_gizmosql.py  common_basis_local.py  common_basis_quack.py  common_basis_s3.py  concept_analysis.py  concept_geography.py  create_excel_dashboard.py  create_proposal.py  dhh_search_tool.py  explore_database.py  generate_baseline.py  inspect_bibs.py  inspect_country.py  inspect_eid.py  inspect_fields.py  (+2 more)
(+51 files in other folders)
