[project]
name = "books"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hereutil>=0.1.5",
    "narwhals>=2.21.0",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pyspark>=4.1.1",
    "pyyaml>=6.0.3",
    "sqlframe-gizmosql>=1.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
]
