[project]
name = "books"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adbc-driver-gizmosql>=1.1.7",
    "boto3>=1.43.11",
    "duckdb>=1.5.2",
    "folium>=0.20.0",
    "gspread>=6.2.1",
    "hereutil>=0.1.5",
    "matplotlib>=3.10.9",
    "narwhals>=2.21.0",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pyspark>=4.1.1",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "sqlframe-gizmosql>=1.2.2",
    "tqdm>=4.67.3",
    "types-boto3[s3]>=1.43.11",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
]
